feat: support word delete API fix: convert big integer to string in response
