# api/http/v1/user.go
@@ -14,7 +14,7 @@ import (
 // @Tags User
 // @Accept application/json
 // @Produce  application/json
-// @Param form body service.RegisterService true "用户名, 密码, 邮箱, 昵称"
+// @Param form body service.UserRegisterService true "用户名, 密码, 邮箱, 昵称"
 // @Success 0 {object} serializer.Response "msg: Success"
 // @Failure 30001 {object} serializer.Response "msg: 参数错误"
 // @Router /user/register [post]
@@ -54,7 +54,7 @@ func UserLogin(c *gin.Context) {
 // @Tags User
 // @Produce  application/json
 // @Param Authorization header string true "用户令牌"
-// @Success 0 {object} serializer.UserResponse "msg: Success"
+// @Success 0 {object} serializer.User "msg: Success"
 // @Failure 50000 {object} serializer.Response "msg: 查询个人信息错误"
 // @Router /user/info [get]
 func UserInfo(c *gin.Context) {
